--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ ollama>=0.3.0
 pydantic>=2.0.0
 python-dotenv>=1.0.0
 pytest>=7.0.0
+langchain>=0.1.0
+langchain_community>=0.0.30
+langgraph>=0.0.20
