A Python program that enables cooperative interaction between multiple locally hosted LLMs using Ollama, orchestrated through LangGraph workflows.
The system implements a **Multi-Layered Validation Workflow** where different LLMs take on specialized roles, orchestrated through a **graph-based state machine using LangGraph**. The key to this architecture is a series of fast, iterative loops that validate the work at each stage, including a sandboxed environment for code development and a reflective mechanism for overcoming stagnation.

Update .gitignore and requirements.txt

Updated .gitignore to include common Python-related ignores such as database files, log files, and Jupyter
     notebook checkpoints.

Updated requirements.txt to include autopep8 and flake8 with pinned versions, and updated PyYAML to the
     latest version.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,13 @@ build/
 logs/
 deliverables/
 mockups/
+
+# Databases
+*.sqlite3
+*.db
+
+# Logs
+*.log
+
+# Jupyter notebooks
+.ipynb_checkpoints/
