Establish baseline for MCP integration and resolve dependency conflicts
## ✨ GitHub Commit Message

**Commit Title:** Establish Stable Baseline for MyChatDev with MCP Integration Roadmap

**Commit Description:**

This commit lays a robust foundation for the MyChatDev project by resolving critical dependency issues and initiating architectural preparations for Model Context Protocol (MCP) integration.

### 🔧 Key Enhancements:

- **Dependency Resolution:** Fixed a `TypeError` caused by version conflicts between `pydantic` and `langchain`. Updated `requirements.txt` to ensure compatibility and stability.
- **Development Status Update:** Revised `docs/DEVELOPMENT_STATUS.md` to reflect the resolved dependency issues and current development trajectory.
- **MCP Ecosystem Review:** Conducted a comprehensive audit of the `MCP` folder to understand its role as a modular ecosystem supporting the Model Context Protocol.
- **MCP Integration Proposal:** Updated `docs/DESIGN_IMPROVEMENTS.md` to formally propose MCP as a pluggable sandbox module, promoting modularity and protocol standardization.
- **Dual Design Specifications:** Authored two complementary design documents to guide parallel development tracks:
  - `docs/MyChatDev_MCP_Integration_Design.md`: Outlines refactoring of the core MyChatDev application to support optional MCP integration via a sandbox interface.
  - `MCP/MCP_for_MyChatDev_Design.md`: Details the architecture of MCP server and client components tailored for MyChatDev, ensuring clean interfaces and seamless integration.

This baseline ensures architectural readiness before initiating focused development within the `MCP` module.

---

## 📘 GitHub Repository Description

MyChatDev is a cooperative LLM system that orchestrates multiple agents to assist with software development tasks. This release establishes a stable baseline by resolving key dependencies and introducing architectural scaffolding for integrating the Model Context Protocol (MCP).

MCP will serv

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 ollama>=0.3.0
-pydantic>=2.0.0
+pydantic>=2.7.1
 python-dotenv>=1.0.0
 pytest>=7.0.0
-langchain>=0.1.0
-langchain_community>=0.0.30
-langgraph>=0.0.20
+langchain>=0.1.20
+langchain-core>=0.1.52
+langchain_community>=0.0.38
+langsmith>=0.1.57
+langgraph>=0.0.48
 PyYAML>=6.0
